# mandarin-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  assistant.py  phrases.json  pyproject.toml
github/workflows/: test.yaml
static/: style.css
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_app.py
