[project]
name = "mandarin-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Austin Wo",email = "wworachet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "numpy (<2.0.0)",
    "torch (==2.3.1)",
    "transformers (==4.40.2)",
    "sentence-transformers (==2.7.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
